2008-03-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Cleanup for module proctitle.

	* libopenvas/proctitle.c: replace inlusion of "includes.h" by
	respective single includes.

	* include/libopenvas.h: Removed declarations for proctitle
	and replaced by include of proctitle. The declarations were
	not identical but similar enough.

	* Makefile: Install libopenvas/proctitle.h.

2008-03-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/scanners_utils.c (qsort_compar): Made static.

2008-03-22  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Cleanup for module popen.

	* libopenvas/popen.h: New. Contains declarations
	for module "popen" (extracted from libopenvas.h)

	* libopenvas/popen.c: replace inlusion of "includes.h" by
	respective single includes.

	* include/libopenvas.h: Moved any popen declarations
	to popen.h.

	* libopenvas/scanner_utils.h: Added missing include.

	* Makefile: Install libopenvas/popen.h.

	* MANIFEST: Updated.

2008-03-22  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Cleanup for module www_funcs.

	* libopenvas/www_funcs.h: New. Contains declarations
	for module "www_funcs" (extracted from libopenvas.h)

	* libopenvas/www_funcs.c: replace inlusion of "includes.h" by
	respective single includes.

	* include/libopenvas.h: Moved any www_funcs declarations
	to www_funcs.h.

	* libopenvas/plugutils.h: Added missing include.

	* Makefile: Install libopenvas/plugutils_internal.h.

	* MANIFEST: Updated.

2008-03-21  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Cleanup for module plugutils.

	* libopenvas/plugutils.h: New. Contains declarations
	for module "plugutils" (extracted from libopenvas.h)

	* libopenvas/plugutils.c: replace inlusion of "includes.h" by
	respective single includes. Removed "ExtFunc".

	* include/libopenvas.h: Moved any plugutils declarations
	to plugutils.h.

	* libopenvas/comm.h, libopenvas/services.h,
	libopenvas/scanners_utils.h: Remove "ExtFunc" declaration.
