@@ -1,5 +1,17 @@
 2008-03-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
+	Cleanup for module rand.
+
+	* libopenvas/rand.c: replace inlusion of "includes.h" by
+	respective single includes.
+
+	* include/libopenvas.h: Removed declarations for rand
+	and replaced by include of proctitle.
+
+	* Makefile: Install libopenvas/rand.h.
+
+2008-03-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
+
 	Cleanup for module proctitle.
 
 	* libopenvas/proctitle.c: replace inlusion of "includes.h" by
